MVP: fix fast move and design align for ranking

--- a/src/Pokemon/PokemonListComponent.scss
+++ b/src/Pokemon/PokemonListComponent.scss
@@ -1,6 +1,6 @@
 .tabContainer {
   margin-top: 8.5em;
-  max-width: 60%;
+  // max-width: 60%;
   .tabList {
     .tab[aria-selected="true"] {
       box-shadow: #61dafb 0 0px 20px;
